--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "node-telegram-bot-api": ""
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
